--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
  
 
   
-      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">       
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/members']">Matches 
            </a>
@@ -18,6 +18,9 @@
          
       </ul>
       <div  *ngIf="loggedIn()"      class="dropdown" dropdown>
+          <span class="mr-1">
+              <img src="{{photoUrl}}" alt="">
+            </span>
           <a class="dropdown-toggle text-light" dropdownToggle>
            Welcome {{authServie.decodedToken?.unique_name | titlecase}}
           </a>
