--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-sm-4">
          <div class="card">
-    <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user?.knownAs}}">
+    <img class="card-img-top img-thumbnail" src="{{photoUrl || '../../../../../assets/user.jpg'}}" alt="{{user?.knownAs}}">
        <div class="car-body">
     <div class="offset-sm-2">
         <strong>Location:</strong>
@@ -41,7 +41,7 @@
             <div class="tab-panel">
               <tabset class="member-tabset">
                 <tab heading="Edit Profile">
-                    <form #editForm="ngForm" id="editForm" (ngSubmit) = "updateUser()">
+                    <form #editForm="ngForm" id="editForm" (ngSubmit)= "updateUser()">
                             <h4>Description</h4>
                             <textarea name="introduction" rows="6"  [(ngModel)]="user.introduction"  class="form-control"></textarea>
                             <h4>Looking For</h4>
