--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -25,11 +25,11 @@
   
     <div class="offset-sm-2">
         <strong>Last Active:</strong>
-        <p>{{user.lastActive}}</p>
+        <p>{{user.lastActive | timeAgo}}</p>
       </div>  
   <div class="offset-sm-2">
-      <strong>Member sinse:</strong>
-      <p>{{user.created}}</p>
+      <strong>Member since:</strong>
+      <p>{{user.created | date: 'mediumDate'}}</p>
     </div>  
     <div class="card-footer">       
           <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>          
