--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark  bg-dark">
   <div class="container">
-      <a class="navbar-brand" [routerLink]="['/home']"  >Dating App</a>
+      <a class="navbar-brand" [routerLink]="['/home']">CourtShip</a>
  
 
   
